# aboltabolyzer

./: .gitignore  README.md  how-it-works.md  howto.md  justfile  main.py  plan.md  pyproject.toml  requirements.txt
configs/: config.toml
corpus/: README.md
dataset/: sample_dataset.json  sample_submission.csv  testset_audit_200.csv  testset_audit_200_labeled.csv  testset_audit_200_typed.csv
logs/: debug_llm_verifier.jsonl
scripts/: analyze_submission.py  download_corpus.py  download_english_corpus.py  download_models.py  probe_nli_context.py  probe_think_batch_smoke.py  probe_think_batching.py  sort_corpus.py
src/: blender.py  config_utils.py  evaluate.py  evidence_policy.py  llm_verifier.py  nli.py  predict.py  preprocess.py  rag.py  router.py  train.py  tui.py  xlmr_encoder.py
tests/: test_pipeline.py
